# ObjectPong

./: CMakeLists.txt  Pong.kdev4  README.md
src/: gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  pong.cpp  pong.h  pong.ui
src/assets/: ball.cpp  ball.h  pad.cpp  pad.h
